--- a/Practica3/style.css
+++ b/Practica3/style.css
@@ -6,7 +6,6 @@
 }
 
 
-
 body{
 	min-width: 320px;
 	max-width: 1920px;
@@ -15,7 +14,7 @@ body{
 	
 }
 
-	body>header{
+	body>div>header{
 		overflow: hidden;
 		background-image: url(Images/fondo-header.jpg);
 		display: flex;
@@ -25,16 +24,16 @@ body{
 		text-align: center;
 	}
 
-		body>header>img{
+		body>div>header>img{
 			width: 200px;
 			height: 200px;
 		}
 
-			body>header>div>h1{
+			body>div>header>div>h1{
 				padding-top: 1em;
 			}
 
-			body>header>div>p{
+			body>div>header>div>p{
 				margin: 0;
 			}
 
@@ -175,6 +174,38 @@ canvas{
 	color: #363431;
 }
 
+.estadisticas{
+	display: inline;
+	font-family: Courier,sans-serif;
+	color: #363431;
+}
+
+#mensaje-modal{
+	display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 10%; /* Location of the box */
+    text-align: center;
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    
+}
+
+#mensaje-modal>div{
+	border:1px solid white;
+	background-color: rgba(255,255,255,0.8);
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    border-radius: 50px;
+    width: 80%;
+    color:#000;
+}
 
 /* Parte del acerca de */
 
